<resources>
    <string name="app_name">Táplálkozás Követő Alkalmazás</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sing_up">Sing Up</string>
    <string name="e_mail">E-mail</string>
    <string name="password_again">Password again</string>
    <string name="food">food</string>
    <string name="calory">calory</string>
    <string name="delete">delete</string>
</resources>