<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/itemFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/food"
            android:textColor="?android:textColorSecondary" />

        <TextView
            android:id="@+id/calory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/itemFood"
            android:padding="8dp"
            android:text="@string/calory" />

        <Button
            android:id="@+id/delete"
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="84dp"
            android:layout_marginEnd="113dp"
            android:layout_toEndOf="@+id/calory"
            android:text="@string/delete" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>